--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-numpy
-opencv-python-headless
-pillow
-ultralytics
+streamlit==1.24.0
+opencv-python-headless==4.8.0.74
+numpy>=1.22.0
+Pillow>=9.0.0
+ultralytics==8.0.124
