--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit==1.24.0
 opencv-python-headless==4.8.0.74
-numpy>=1.22.0
-Pillow>=9.0.0
+numpy>=1.22.0,<2.0.0
+Pillow>=10.0.0
 ultralytics==8.0.124
